@@ -8,55 +8,64 @@ import org.hofftech.parking.model.Truck;
 import java.util.List;
 
 /**
- * Сервис для управления размещением упаковок в грузовике.
+ * Сервис для управления упаковками в грузовике.
+ * Предоставляет методы для проверки возможности добавления упаковки,
+ * упаковки в грузовик и размещения упаковки на сетке грузовика.
  */
 @Slf4j
 public class ParcelService {
 
+    private static final int START_Y_POSITION = 0;
+    private static final int START_X_POSITION = 0;
+    private static final char EMPTY_SPACE = ' ';
+    private static final double SUPPORT_FACTOR = 0.5;
+    private static final int INITIAL_SYMBOL_INDEX = 0;
+
     /**
-     * Проверяет возможность добавления упаковки в указанные координаты.
+     * Проверяет, можно ли добавить указанную упаковку в грузовик
+     * в заданные координаты.
      *
-     * @param truck  Грузовик, в который пытаются добавить упаковку.
-     * @param parcel Упаковка, которую необходимо добавить.
-     * @param startX Начальная координата X для размещения упаковки.
-     * @param startY Начальная координата Y для размещения упаковки.
-     * @return {@code true}, если упаковку можно добавить, {@code false} в противном случае.
+     * @param truck          Грузовик, в который пытаемся добавить упаковку.
+     * @param providedParcel Упаковка, которую нужно добавить.
+     * @param startX         Начальная позиция по оси X.
+     * @param startY         Начальная позиция по оси Y.
+     * @return {@code true}, если упаковку можно добавить, иначе {@code false}.
      */
-    protected boolean canAddPackage(Truck truck, Parcel parcel, int startX, int startY) {
-        log.debug("Проверяем возможность добавить упаковку {} в координаты X={}, Y={}", parcel.getName(), startX, startY);
-        List<String> shape = parcel.getUniqueShape();
+    protected boolean canAddParcel(Truck truck, Parcel providedParcel, int startX, int startY) {
+        log.debug("Проверяем возможность добавить упаковку {} в координаты X={}, Y={}", providedParcel.getName(), startX, startY);
+        List<String> shape = providedParcel.getReversedShape();
         int height = shape.size();
 
-        if (checkTruckLimits(truck, parcel, startX, startY, height, shape)) return false;
+        if (isParcelWithinLimits(truck, providedParcel, startX, startY, height, shape)) return false;
 
-        if (checkForIntersection(truck, parcel, startX, startY, height, shape)) return false;
+        if (isIntersection(truck, providedParcel, startX, startY, height, shape)) return false;
 
-        String topRow = shape.getFirst();
-        int requiredSupport = (int) Math.ceil(topRow.length() / 2.0);
+        String topRow = shape.get(0);
+        double requiredSupport = Math.ceil(topRow.length() * SUPPORT_FACTOR);
         int support = 0;
-        if (startY == 0) {
-            log.debug("Упаковка {} внизу грузовика, опора не требуется.", parcel.getName());
+        if (startY == START_Y_POSITION) {
+            log.debug("Упаковка {} внизу грузовика, опора не требуется.", providedParcel.getName());
             return true;
         }
 
-        return !checkForSupport(truck, parcel, startX, startY, topRow, support, requiredSupport);
+        return !isParcelSupported(truck, providedParcel, startX, startY, topRow, support, requiredSupport);
     }
 
     /**
-     * Проверяет наличие достаточной опоры для размещения упаковки.
+     * Проверяет, поддерживается ли верхняя строка упаковки достаточным количеством опор.
      *
      * @param truck           Грузовик, в котором размещается упаковка.
-     * @param parcel          Упаковка, для которой проверяется опора.
-     * @param startX          Начальная координата X.
-     * @param startY          Начальная координата Y.
+     * @param parcel          Упаковка, для которой выполняется проверка.
+     * @param startX          Начальная позиция по оси X.
+     * @param startY          Начальная позиция по оси Y.
      * @param topRow          Верхняя строка формы упаковки.
-     * @param support         Текущее количество опор.
-     * @param requiredSupport Необходимое количество опор.
-     * @return {@code true}, если опоры недостаточно, {@code false} иначе.
+     * @param support         Количество текущих опор.
+     * @param requiredSupport Требуемое количество опор.
+     * @return {@code true}, если опор недостаточно, иначе {@code false}.
      */
-    private boolean checkForSupport(Truck truck, Parcel parcel, int startX, int startY, String topRow, int support, int requiredSupport) {
-        for (int x = 0; x < topRow.length(); x++) {
-            if (topRow.charAt(x) != ' ' && truck.getGrid()[startY - 1][startX + x] != ' ') {
+    private boolean isParcelSupported(Truck truck, Parcel parcel, int startX, int startY, String topRow, int support, double requiredSupport) {
+        for (int x = INITIAL_SYMBOL_INDEX; x < topRow.length(); x++) {
+            if (topRow.charAt(x) != EMPTY_SPACE && truck.getGrid()[startY - 1][startX + x] != EMPTY_SPACE) {
                 support++;
             }
         }
@@ -68,17 +77,17 @@ public class ParcelService {
     }
 
     /**
-     * Проверяет пересечение упаковки с уже размещенными объектами в грузовике.
+     * Проверяет, пересекается ли упаковка с уже размещенными объектами в грузовике.
      *
-     * @param truck  Грузовик, в котором размещается упаковка.
-     * @param parcel Упаковка, которую проверяют на пересечение.
-     * @param startX Начальная координата X.
-     * @param startY Начальная координата Y.
+     * @param truck  Грузовик, в котором проверяется пересечение.
+     * @param parcel Упаковка, для которой выполняется проверка.
+     * @param startX Начальная позиция по оси X.
+     * @param startY Начальная позиция по оси Y.
      * @param height Высота формы упаковки.
-     * @param shape  Форма упаковки.
-     * @return {@code true}, если происходит пересечение, {@code false} иначе.
+     * @param shape  Форма упаковки в виде списка строк.
+     * @return {@code true}, если происходит пересечение, иначе {@code false}.
      */
-    private boolean checkForIntersection(Truck truck, Parcel parcel, int startX, int startY, int height, List<String> shape) {
+    private boolean isIntersection(Truck truck, Parcel parcel, int startX, int startY, int height, List<String> shape) {
         for (int y = 0; y < height; y++) {
             for (int x = 0; x < shape.get(y).length(); x++) {
                 if (shape.get(y).charAt(x) != ' ' && truck.getGrid()[startY + y][startX + x] != ' ') {
@@ -91,17 +100,17 @@ public class ParcelService {
     }
 
     /**
-     * Проверяет, выходит ли упаковка за пределы грузовика.
+     * Проверяет, находится ли упаковка в пределах размеров грузовика.
      *
-     * @param truck  Грузовик, в который пытаются добавить упаковку.
-     * @param parcel Упаковка, которую проверяют.
-     * @param startX Начальная координата X.
-     * @param startY Начальная координата Y.
+     * @param truck  Грузовик, в который пытаемся добавить упаковку.
+     * @param parcel Упаковка, которую нужно проверить.
+     * @param startX Начальная позиция по оси X.
+     * @param startY Начальная позиция по оси Y.
      * @param height Высота формы упаковки.
-     * @param shape  Форма упаковки.
-     * @return {@code true}, если упаковка выходит за пределы, {@code false} иначе.
+     * @param shape  Форма упаковки в виде списка строк.
+     * @return {@code true}, если упаковка выходит за пределы грузовика, иначе {@code false}.
      */
-    private boolean checkTruckLimits(Truck truck, Parcel parcel, int startX, int startY, int height, List<String> shape) {
+    private boolean isParcelWithinLimits(Truck truck, Parcel parcel, int startX, int startY, int height, List<String> shape) {
         for (int y = 0; y < height; y++) {
             int rowWidth = shape.get(y).length();
             if (startX + rowWidth > truck.getWidth() || startY + y >= truck.getHeight()) {
@@ -113,43 +122,61 @@ public class ParcelService {
     }
 
     /**
-     * Добавляет упаковку в грузовик, если это возможно.
+     * Пытается добавить указанную упаковку в грузовик.
+     * Перебирает все возможные позиции и проверяет возможность добавления.
      *
-     * @param truck  Грузовик, в который будет добавлена упаковка.
-     * @param parcel Упаковка, которую необходимо добавить.
-     * @return {@code true}, если упаковка успешно добавлена, {@code false} иначе.
+     * @param truck          Грузовик, в который пытаемся добавить упаковку.
+     * @param providedParcel Упаковка, которую нужно добавить.
+     * @return {@code true}, если упаковку удалось добавить, иначе {@code false}.
      */
-    protected boolean addPackage(Truck truck, Parcel parcel) {
-        log.info("Пытаемся добавить упаковку {} в грузовик.", parcel.getName());
+    protected boolean tryPack(Truck truck, Parcel providedParcel) {
+        log.info("Пытаемся добавить упаковку {} в грузовик.", providedParcel.getName());
 
-        List<String> shape = parcel.getUniqueShape();
+        List<String> shape = providedParcel.getReversedShape();
         int height = shape.size();
 
-        for (int startY = 0; startY <= truck.getHeight() - height; startY++) {
-            for (int startX = 0; startX <= truck.getWidth() - shape.getFirst().length(); startX++) {
-                if (canAddPackage(truck, parcel, startX, startY)) {
-                    log.info("Упаковка {} успешно добавлена", parcel.getName());
-                    parcel.setParcelStartPosition(new ParcelStartPosition(startX, startY));
-                    placePackage(truck, parcel, startX, startY);
+        boolean packed = iterateOverStartY(truck, providedParcel, shape, height);
+
+        if (!packed) {
+            log.warn("Упаковка {} не смогла быть добавлена в грузовик.", providedParcel.getName());
+        }
+
+        return packed;
+    }
+
+    /**
+     * Перебирает возможные позиции по оси Y и пытается разместить упаковку.
+     *
+     * @param truck          Грузовик, в который пытаемся добавить упаковку.
+     * @param providedParcel Упаковка, которую нужно добавить.
+     * @param shape          Форма упаковки в виде списка строк.
+     * @param height         Высота формы упаковки.
+     * @return {@code true}, если упаковку удалось добавить, иначе {@code false}.
+     */
+    private boolean iterateOverStartY(Truck truck, Parcel providedParcel, List<String> shape, int height) {
+        for (int startY = START_Y_POSITION; startY <= truck.getHeight() - height; startY++) {
+            for (int startX = START_X_POSITION; startX <= truck.getWidth() - shape.getFirst().length(); startX++) {
+                if (canAddParcel(truck, providedParcel, startX, startY)) {
+                    log.info("Упаковка {} успешно добавлена", providedParcel.getName());
+                    providedParcel.setParcelStartPosition(new ParcelStartPosition(startX, startY));
+                    placeParcel(truck, providedParcel, startX, startY);
                     return true;
                 }
             }
         }
-
-        log.warn("Упаковка {} не смогла быть добавлена в грузовик.", parcel.getName());
         return false;
     }
 
     /**
-     * Размещает упаковку на грузовике в указанных координатах.
+     * Размещает указанную упаковку на сетке грузовика в заданных координатах.
      *
-     * @param truck  Грузовик, на котором будет размещена упаковка.
-     * @param parcel Упаковка, которую необходимо разместить.
-     * @param startX Начальная координата X.
-     * @param startY Начальная координата Y.
+     * @param truck  Грузовик, в котором размещается упаковка.
+     * @param parcel Упаковка, которую нужно разместить.
+     * @param startX Начальная позиция по оси X.
+     * @param startY Начальная позиция по оси Y.
      */
-    protected void placePackage(Truck truck, Parcel parcel, int startX, int startY) {
-        List<String> shape = parcel.getUniqueShape();
+    protected void placeParcel(Truck truck, Parcel parcel, int startX, int startY) {
+        List<String> shape = parcel.getReversedShape();
 
         for (int y = 0; y < shape.size(); y++) {
             for (int x = 0; x < shape.get(y).length(); x++) {
